WIP: FIx loading spinner being stuck symptom when non-map canvas is selected, adjust saved filenames' visual

--- a/public/css/drawing-sidebar.css
+++ b/public/css/drawing-sidebar.css
@@ -109,6 +109,7 @@
 .drawing-sidebar .drawings-list {
   flex-grow: 1;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .drawing-sidebar .list-group-item {
